continue to ..desining

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MoreAppsActivity"></activity>
-        <activity android:name=".activity.MainActivity">
+
+        <activity android:name=".activity.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,6 +24,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.ShowWallPepar_Activity" />
+        <activity android:name=".activity.MainActivity"/>
+        <activity android:name=".activity.MoreAppsActivity" />
     </application>
 
 </manifest>
