--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,9 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:29.0.0'
 
     //Picaso
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    //implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:3.7.0'
@@ -64,7 +66,7 @@ dependencies {
     //for navigationview
     implementation 'com.android.support:design:29.0.0'
 
-   // implementation 'de.hdodenhof:circleimageview:1.2.1'
+    // implementation 'de.hdodenhof:circleimageview:1.2.1'
 
     implementation 'com.google.android.gms:play-services-ads:8.4.0'
 }
